--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MYSQL_URL="mysql://root:h08SokQShOWPIfu5uqm5@containers-us-west-74.railway.app:6313/railway"
+MYSQL_URL="mysql://root:Kzmdxtv8Xidg92Tift6n@containers-us-west-197.railway.app:6856/railway"
 PORT=3000
